--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "clean": "rm -rf .next && rm -rf cache"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@strapi/blocks-react-renderer": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.12.0",
@@ -23,6 +24,7 @@
     "ky": "^1.7.4",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -30,6 +32,7 @@
     "rehype-raw": "^7.0.0",
     "rehype-react": "^8.0.0",
     "remark-gfm": "^4.0.0",
+    "sonner": "^1.7.4",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1",
