--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "clean": "rm -rf .next && rm -rf cache"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@strapi/blocks-react-renderer": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.12.0",
